--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
@@ -22,6 +24,7 @@
     "react-form-hook": "^0.0.1",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "supabase": "^1.176.10",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
